# jax_mbpo

./: .gitignore  README.md  main.py  pyproject.toml
config/: ant.yaml  main.yaml  main_submitit.yaml
config/algo/: ant.yaml  base.yaml  cartpole.yaml  cheetah.yaml  hopper.yaml  humanoid.yaml  walker.yaml
mbpo/: evaluation.py
mbpo/algos/: agent.py  common.py
mbpo/algos/model_learning/: model_learner.py  model_trainer.py  model_update_step.py  model_updater.py
mbpo/algos/sac/: __init__.py  actor_update_step.py  critic_update_step.py  critic_updater.py  sac_learner.py  sac_trainer.py
mbpo/data/: __init__.py  dataset.py  replay_buffer.py
mbpo/env_utils/: distracting_obs_wrapper.py  termination_fns.py
mbpo/nn/: mlp.py  normal_tanh_policy.py
mbpo/nn/model/: deterministic_env_model.py  gaussian_env_model.py
mbpo/nn/values/: __init__.py  state_action_ensemble.py  state_action_value.py  state_value.py
mbpo/runner/: train_online.py
mbpo/utils/: checkpoint.py  target_update.py
scripts/vagram_paper/: .run_submitit.sh.swp  run_submitit.sh  run_test.sh
