[project]
name = "jax-mbpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.6"
dependencies = [
    "black>=25.1.0",
    "distrax>=0.1.5",
    "flax>=0.10.4",
    "gymnasium[mujoco]>=1.1.0",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "jax[cuda12]>=0.5.1",
    "ml-collections>=1.0.0",
    "optax>=0.2.4",
    "orbax>=0.1.9",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mbpo"]
